--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,8 @@
       <ul>
         <li><a href="api/timestamp/2015-12-25">[project url]/api/timestamp/2015-12-25</a></li>
         <li><a href="api/timestamp/1451001600000">[project url]/api/timestamp/1451001600000</a></li>
+        <li><a href="api/timestamp/InvalidDate">[project url]/api/timestamp/InvalidDate</a></li>
+        <li><a href="api/timestamp/">[project url]/api/timestamp/</a></li>
       </ul>
 
       <h3>Example Output:</h3>
